# dollscript

./: Cargo.toml  README.markdown  build.zig  build.zig.zon  sample.doll
.github/workflows/: dollscript.yml
example/: boo.shamu  sample.doll
example/src/: main.doll
sample/: sample.doll
src/: err.zig  lexer.zig  lib.rs  main.rs  parser.zig  root.zig  utils.zig
src/modules/: err.rs  lexer.rs  mod.rs  parser.rs  tests.rs  utils.rs
