[package]
name = "dollscript"
version = "0.1.0"
edition = "2024"
icense-file = "LICENSE"
author = ["Alyx Shang"]
description= "A light and fast interpreter for a language for dramatic dollies."
homepage = "https://github.com/alyxshang/dollscript"
repository = "https://github.com/alyxshang/dollscript"
readme = "README.markdown"

#[[bin]]
#path = "src/main.rs"
#name = "dolly"

#[profile.release]
#lto = true
#strip = true
#opt-level = "z"
#codegen-units = 1
